feat: add image in card contents

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta property="twitter:card" content="" >    
+<meta property="twitter:card" content="img/twitterthumbnail1.png" >    
 <meta property='twitter:site' content='Baridi Baridi Tanzania'/>
 <meta property='twitter:account_id' content="1466326591303294978"/>
 <meta property='twitter:creator' content="@MhojaTimotheo"/>
