feat: change quotes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property='twitter:title' content="Baridi Baridi Tanzania"/>
 <meta property='twitter:description' content='This is awesome description'/>
 <meta property='twitter:image:src' content='img/twitterthumbnail1.png'/>
-<meta property=’og:url’ content='https://baridi-testing-site.netlify.app/'/>
+<meta property='og:url' content='https://baridi-testing-site.netlify.app/'/>
 
 </head>
 <body>
