feat: comment script

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 <body>
     <div>
-        <img src="img/twitterthumbnail1.png">
+        <img src="img/twitterthumbnail1.png" />
     </div>
-  
+<!--   
     <script>
        onload: function redirect(){
             window.location.href = "https://baridibaridi.co.tz/";
         }
         window.redirect()
-    </script>
+    </script> -->
 </body>
 </html>
