feat: change image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        <img src="img/twitterthumbnail1.png" />
+        <img src="img/full-blood-pic.jpg" />
     </div>
 <!--   
     <script>
