feat: change image url

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta property="twitter:card" content="img/twitterthumbnail1.png" >    
+<meta property="twitter:card" content="img/full-blood-pic.jpg" >    
 <meta property='twitter:site' content='Baridi Baridi Tanzania'/>
 <meta property='twitter:account_id' content="1466326591303294978"/>
 <meta property='twitter:creator' content="@MhojaTimotheo"/>
 <meta property='twitter:title' content="Baridi Baridi Tanzania"/>
 <meta property='twitter:description' content='This is awesome description'/>
-<meta property='twitter:image:src' content='img/twitterthumbnail1.png'/>
+<meta property='twitter:image:src' content='img/full-blood-pic.jpg'/>
 <meta property='og:url' content='https://baridi-testing-site.netlify.app/'/>
 
 </head>
