--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- 
 <meta property="twitter:card" content="img/full-blood-pic.jpg" >    
 <meta property='twitter:site' content='Baridi Baridi Tanzania'/>
 <meta property='twitter:account_id' content="1466326591303294978"/>
@@ -8,7 +8,14 @@
 <meta property='twitter:title' content="Baridi Baridi Tanzania"/>
 <meta property='twitter:description' content='This is awesome description'/>
 <meta property='twitter:image:src' content='img/full-blood-pic.jpg'/>
-<meta property='og:url' content='https://baridi-testing-site.netlify.app/'/>
+<meta property='og:url' content='https://baridi-testing-site.netlify.app/'/> -->
+
+<meta name="twitter:card " content="summary_large_image " />
+<meta name="twitter:description " content="Learn how to implement hreflang to get search engines to rank the right pages for your multi- language site. Check it out now!" />
+<meta name="twitter:title" content="Hreflang: ranking the right pages for multi-language sites" />
+<meta name="twitter:site" content="@contentking" />
+<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:creator" content="@contentking" />
 
 </head>
 <body>
