--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- 
 <meta property="twitter:card" content="img/full-blood-pic.jpg" >    
 <meta property='twitter:site' content='Baridi Baridi Tanzania'/>
 <meta property='twitter:account_id' content="1466326591303294978"/>
@@ -8,19 +8,30 @@
 <meta property='twitter:title' content="Baridi Baridi Tanzania"/>
 <meta property='twitter:description' content='This is awesome description'/>
 <meta property='twitter:image:src' content='img/full-blood-pic.jpg'/>
-<meta property='og:url' content='https://baridi-testing-site.netlify.app/'/>
+<meta property='og:url' content='https://baridi-testing-site.netlify.app/'/> -->
+    
+<meta name="twitter:card " content="summary_large_image " />
+<meta name="twitter:description " content="Baridi Baridi is a Japanese company offering service in Tanzania, it is the first company in Tanzania and all over the world,
+                                           which provide air conditioners subscription service for offices, shops, and homes. Baridi Baridi deals with renting the world’s No. 1 air conditioners,
+                                           Daikin inverter air conditioners which use energy saving technology that eliminates wasted 
+                                           operation in air conditioners by efficiently controlling motor speed and reduce electricity consumption hence reduce electricity cost.
+                                           " />
+<meta name="twitter:title" content="Baridi Baridi Tanzania Inc" />
+<meta name="twitter:site" content="@contentking" />
+<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:creator" content="@TimotheoMhoja" />
 
 </head>
 <body>
     <div>
         <img src="img/full-blood-pic.jpg" />
     </div>
-<!--   
+  
     <script>
        onload: function redirect(){
             window.location.href = "https://baridibaridi.co.tz/";
         }
         window.redirect()
-    </script> -->
+    </script>
 </body>
 </html>
