--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="twitter:card " content="summary_large_image " />
+    <meta property='og:url' content='https://baridi-testing-site.netlify.app/'/>
+<meta name="twitter:description " content="TESTING" />
+<meta name="twitter:title" content="Hreflang: ranking the right pages for multi-language sites" />
+<meta name="twitter:site" content="@contentking" />
+<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:creator" content="@contentking" />
 
-<meta property="twitter:card" content="img/full-blood-pic.jpg" >    
+<!-- <meta property="twitter:card" content="img/full-blood-pic.jpg" >    
 <meta property='twitter:site' content='Baridi Baridi Tanzania'/>
 <meta property='twitter:account_id' content="1466326591303294978"/>
 <meta property='twitter:creator' content="@MhojaTimotheo"/>
 <meta property='twitter:title' content="Baridi Baridi Tanzania"/>
 <meta property='twitter:description' content='This is awesome description'/>
 <meta property='twitter:image:src' content='img/full-blood-pic.jpg'/>
-<meta property='og:url' content='https://baridi-testing-site.netlify.app/'/>
+<meta property='og:url' content='https://baridi-testing-site.netlify.app/'/> -->
 
 </head>
 <body>
-    <div>
+<!--     <div>
         <img src="img/full-blood-pic.jpg" />
-    </div>
-<!--   
+    </div> -->
+  
     <script>
        onload: function redirect(){
             window.location.href = "https://baridibaridi.co.tz/";
         }
         window.redirect()
-    </script> -->
+    </script>
 </body>
 </html>
