--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta property="twitter:card" content="img/full-blood-pic.jpg" >    
-<meta property='twitter:site' content='Baridi Baridi Tanzania'/>
-<meta property='twitter:account_id' content="1466326591303294978"/>
-<meta property='twitter:creator' content="@MhojaTimotheo"/>
-<meta property='twitter:title' content="Baridi Baridi Tanzania"/>
-<meta property='twitter:description' content='This is awesome description'/>
-<meta property='twitter:image:src' content='img/full-blood-pic.jpg'/>
-<meta property='og:url' content='https://baridi-testing-site.netlify.app/'/>
+<meta name="twitter:card " content="summary_large_image " />
+<meta name="twitter:description " content="Learn how to implement hreflang to get search engines to rank the right pages for your multi- language site. Check it out now!" />
+<meta name="twitter:title" content="Baridi Baridi Tanzania" />
+<meta name="twitter:site" content="@contentking" />
+<meta name="twitter:image" content="https://picsum.photos/200/300" />
+<meta property='og:url' content='https://deploy-preview-1--baridi-testing-site.netlify.app/'/>
+<meta name="twitter:creator" content="@contentking" />
 
 </head>
 <body>
     <div>
         <img src="img/full-blood-pic.jpg" />
     </div>
-<!--   
+  
     <script>
        onload: function redirect(){
             window.location.href = "https://baridibaridi.co.tz/";
         }
         window.redirect()
-    </script> -->
+    </script>
 </body>
 </html>
