--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <meta name="twitter:card " content="summary_large_image " />
-<meta name="twitter:description " content="Learn how to implement hreflang to get search engines to rank the right pages for your multi- language site. Check it out now!" />
+<meta name="twitter:description " content="Wonderful company" />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
 <meta name="twitter:image" content="https://picsum.photos/200/300" />
