--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                                            Daikin inverter air conditioners which use energy saving technology that eliminates wasted 
                                            operation in air conditioners by efficiently controlling motor speed and reduce electricity consumption hence reduce electricity cost.
                                            " />
-<meta name="twitter:title" content="Baridi Baridi Tanzania Inc" />
+<meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
 <meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
 <meta name="twitter:creator" content="@TimotheoMhoja" />
