--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
 <meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
-<meta name="twitter:creator" content="@TimotheoMhoja" />
+<meta name="twitter:creator" content="@MhojaTimotheo" />
 
 </head>
 <body>
