--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <meta name="twitter:creator" content="@MhojaTimotheo" />
 </head>
 <body>
-    <script>
+    <img src="img/twitterthumbnail1.png"  width="500" height="600">
+
+    <!-- <script>
        onload: function redirect(){
             window.location.href = "https://baridibaridi.co.tz/";
         }
         window.redirect()
-    </script>
+    </script> -->
 </body>
 </html>
