--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta name="twitter:card " content="summary_large_image " />
+<!-- <meta name="twitter:card " content="summary_large_image " />
 <meta property='og:url' content='https://baridibaridi.co.tz/'/>
 <meta name="twitter:description " content="Baridi Baridi is a Japanese company offering service in Tanzania, it is the first company in Tanzania and all over the world,
                                            which provide air conditioners subscription service for offices, shops, and homes. Baridi Baridi deals with renting the world’s No. 1 air conditioners,
@@ -9,8 +9,17 @@
                                            " />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
+  twitterthumbnail1.png
 <meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
-<meta name="twitter:creator" content="@MhojaTimotheo" />
+<meta name="twitter:creator" content="@MhojaTimotheo" /> -->
+  
+ <meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@nytimesbits" />
+<meta name="twitter:creator" content="@nickbilton" />
+<meta property="og:url" content="http://bits.blogs.nytimes.com/2011/12/08/a-twitter-for-my-sister/" />
+<meta property="og:title" content="A Twitter for My Sister" />
+<meta property="og:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
+<meta property="og:image" content="https://picsum.photos/id/237/200/300" />
 </head>
 <body>
     <script>
