--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta name="twitter:card " content="summary_large_image " />
+<!-- <meta name="twitter:card " content="summary_large_image " />
 <meta property='og:url' content='https://baridibaridi.co.tz/'/>
 <meta name="twitter:description " content="Baridi Baridi is a Japanese company offering service in Tanzania, it is the first company in Tanzania and all over the world,
                                            which provide air conditioners subscription service for offices, shops, and homes. Baridi Baridi deals with renting the world’s No. 1 air conditioners,
@@ -10,14 +10,25 @@
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
 <meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
-<meta name="twitter:creator" content="@MhojaTimotheo" />
+<meta name="twitter:creator" content="@MhojaTimotheo" /> -->
+  twitterthumbnail1.png
+  
+ <meta property="og:title" content="Baridi Baridi Tanzania">
+<meta property="og:type" content="article" />
+<meta property="og:description" content="Baridi Baridi is a Japanese company offering service in Tanzania, it is the first company in Tanzania and all over the world,
+                                           which provide air conditioners subscription service for offices, shops, and homes. Baridi Baridi deals with renting the world’s No. 1 air conditioners,
+                                           Daikin inverter air conditioners which use energy saving technology that eliminates wasted 
+                                           operation in air conditioners by efficiently controlling motor speed and reduce electricity consumption hence reduce electricity cost.">
+<meta property="og:image" content="https://ibb.co/BfptF53">
+<meta property="og:url" content="https://baridibaridi.co.tz/">
+<meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
-    <script>
+<!--     <script>
        onload: function redirect(){
             window.location.href = "https://baridibaridi.co.tz/";
         }
         window.redirect()
-    </script>
+    </script> -->
 </body>
 </html>
