--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
                                            " />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
-<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:image" content="https://ibb.co/BfptF53" />
 <meta name="twitter:creator" content="@MhojaTimotheo" />
 </head>
+<!-- https://picsum.photos/id/237/200/300
+ -->
 <body>
     <script>
        onload: function redirect(){
