--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
                                            " />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
-<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:image" content="https://i.ibb.co/BfptF53/baridibaridi.png" />
 <meta name="twitter:creator" content="@MhojaTimotheo" />
+<!--   https://picsum.photos/id/237/200/300 -->
 </head>
 <body>
     <script>
