--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta name="twitter:card " content="summary_large_image " />
+<meta name="twitter:card " content="summary " />
 <meta property='og:url' content='https://baridibaridi.co.tz/'/>
 <meta name="twitter:description " content="Baridi Baridi is a Japanese company offering service in Tanzania, it is the first company in Tanzania and all over the world,
                                            which provide air conditioners subscription service for offices, shops, and homes. Baridi Baridi deals with renting the world’s No. 1 air conditioners,
@@ -9,7 +9,7 @@
                                            " />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
-<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:image" content="https://i.ibb.co/NK5tc4w/baridibaridithumbnail.jpg" />
 <meta name="twitter:creator" content="@MhojaTimotheo" />
 </head>
 <body>
