--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
                                            Daikin inverter air conditioners which use energy saving technology that eliminates wasted 
                                            operation in air conditioners by efficiently controlling motor speed and reduce electricity consumption hence reduce electricity cost.
                                            " />
-<meta name="twitter:title" content="Baridi Baridi Tanzania" />
+<meta name="twitter:title" content="Baridi Baridi Tanzania Inc" />
 <meta name="twitter:site" content="@contentking" />
-<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:image" content="https://baridibaridi-my.sharepoint.com/:i:/p/timotheo_mhoja_tz/Ee-wqk5TWnhFtOr6HLWnmYwBMO1MWZVwdRlJNnQMqD__Eg?e=sIdE6q" />
 <meta name="twitter:creator" content="@MhojaTimotheo" />
 </head>
 <body>
