--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                                            " />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
-<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:image" content="https://baridibaridi-my.sharepoint.com/:u:/p/timotheo_mhoja_tz/EXdRe9ZlHjdOpLFsvj6ZxUoBjlWihjd6v2Nkfoz7IxVOHA?e=5ceYFn" />
 <meta name="twitter:creator" content="@MhojaTimotheo" />
 </head>
 <body>
