--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                                            " />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
-<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:image" content="https://i.ibb.co/jZPvFbj/rsz-thumbnail-01-v.jpg" />
 <meta name="twitter:creator" content="@MhojaTimotheo" />
 </head>
 <body>
