--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                                            " />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
-<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:image" content="https://user-images.githubusercontent.com/61650386/146264276-fdd648ea-bb95-4b04-9960-333d376109ab.jpg" />
 <meta name="twitter:creator" content="@MhojaTimotheo" />
 </head>
 <body>
