--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                                            " />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
 <meta name="twitter:site" content="@contentking" />
-<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:image" content="https://user-images.githubusercontent.com/95680797/146491910-3a70d306-37c8-4b0f-afcd-18d3b4cd51a0.jpg"/>
 <meta name="twitter:creator" content="@MhojaTimotheo" />
 </head>
 <body>
