--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta name="twitter:card " content="summary_large_image " />
-<meta property='og:url' content='https://baridibaridi.co.tz/'/>
+<meta property='og:url' content='https://baridibaridi.co.tz'/>
 <meta name="twitter:description " content="Baridi Baridi is a Japanese company offering service in Tanzania, it is the first company in Tanzania and all over the world,
                                            which provide air conditioners subscription service for offices, shops, and homes. Baridi Baridi deals with renting the world’s No. 1 air conditioners,
                                            Daikin inverter air conditioners which use energy saving technology that eliminates wasted 
                                            operation in air conditioners by efficiently controlling motor speed and reduce electricity consumption hence reduce electricity cost.
                                            " />
 <meta name="twitter:title" content="Baridi Baridi Tanzania" />
-<meta name="twitter:site" content="@contentking" />
-<meta name="twitter:image" content="https://picsum.photos/id/237/200/300" />
+<meta name="twitter:site" content="https://baridibaridi.co.tz" />
+<meta name="twitter:image" content="https://user-images.githubusercontent.com/95680797/146491910-3a70d306-37c8-4b0f-afcd-18d3b4cd51a0.jpg" />
 <meta name="twitter:creator" content="@MhojaTimotheo" />
 </head>
 <body>
